--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .la-globe {
-    color: #ec5242;
+  color: #ec5242;
 }
 
 /* Mobile Styles */
@@ -16,7 +16,88 @@
     display: none;
   }
 
-/* Header Section Mobile */  
+  /* About Page Styles Mobile */
+
+  #form {
+    background-color: #272a31;
+    background-image: url('images/pattern.png');
+    background-size: cover;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  main > h1 {
+    color: #ec5242;
+    font-size: 25px;
+  }
+
+  #form > h1 {
+    color: #d3d3d3;
+    text-align: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    float: left;
+    width: 100%;
+    background-color: #272a31;
+    background-image: url('images/pattern.png');
+    background-size: cover;
+    color: #d3d3d3;
+    font-size: 20px;
+  }
+
+  form > label {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+
+  form > input {
+    float: left;
+    border: 1px solid #cfd8dc;
+    border-radius: 8px;
+    width: 447px;
+    height: 48px;
+    padding: 5px;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 17px;
+    color: #172b4d;
+    margin: 15px;
+  }
+
+  form > select {
+    float: left;
+    border: 1px solid #cfd8dc;
+    border-radius: 8px;
+    width: 447px;
+    height: 48px;
+    padding: 5px;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 17px;
+    color: #172b4d;
+    margin: 15px;
+  }
+
+  form > button {
+    font-size: 18px;
+    color: #d3d3d3;
+    border-radius: 18px;
+    background-color: #ec5242;
+    width: 150px;
+    height: 50px;
+    margin: 0 0 20px 160px;
+  }
+
+  form > button:active {
+    color: #d3d3d3;
+    background-color: #8c2418;
+  }
+
+  /* Header Section Mobile */
 
   .desktop-menu {
     display: none;
@@ -39,6 +120,7 @@
     border: none;
     font-size: 35px;
     cursor: pointer;
+    margin-top: 20px;
   }
 
   #overlay {
@@ -106,14 +188,9 @@
     transform: scaleX(-1);
   }
 
-  main > h1 {
-    color: #ec5242;
-    font-size: 30px;
-  }
-
   main > h2 {
     color: #ec5242;
-    font-size: 60px;
+    font-size: 35px;
     font-weight: 900;
   }
 
@@ -125,18 +202,18 @@
 
   main > h4 {
     color: #333;
-    font-size: 36px;
+    font-size: 30px;
     opacity: 80%;
   }
 
-/* Main Section Mobile */
+  /* Main Section Mobile */
 
-.la-minus {
+  .la-minus {
     color: #ec5242;
     font-size: 60px;
   }
 
-#program {
+  #program {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -145,30 +222,54 @@
     background-color: #272a31;
     background-image: url('images/pattern.png');
     background-size: contain;
-}
+  }
 
-#program > a {
+  footer > a {
+    color: black;
+  }
+
+  #table2 > a {
+    text-decoration: none;
+    font-weight: 900;
+    color: #d3d3d3;
+    font-size: 18px;
+    opacity: 50%;
+  }
+
+  #program > a {
     text-decoration: underline;
     color: #d3d3d3;
     padding: 50px 0 50px 0;
-}
+  }
 
-#program > a:active {
-    color:#ec5242;
-}
+  #program > a:active {
+    color: #ec5242;
+  }
 
-#program > h3 {
+  .ft-speakers > h3 {
+    font-size: 26px;
+    color: #272a31;
+    margin-top: 20px;
+    margin-bottom: -15px;
+  }
+
+  .speaker-card .speaker-info h3 {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+
+  #program > h3 {
     font-size: 26px;
     color: #d3d3d3;
     margin-top: 20px;
     margin-bottom: -15px;
-}
+  }
 
-.program-list {
+  .program-list {
     list-style: none;
-}
+  }
 
-#table {
+  #table {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -177,43 +278,44 @@
     background-color: #ffffff20;
     gap: 15px;
     padding: 10px;
-}
+  }
 
-#table:hover {
+  #table:hover {
     border: 2px solid white;
     cursor: pointer;
-}
+  }
 
-#table > i {
+  #table > i {
     font-size: 50px;
     color: #d3d3d3;
-}
+  }
 
-#table > h2 {
+  #table > h2 {
     font-weight: 900;
     color: #ec5242;
     font-size: 18px;
-}
+  }
 
-#table > p {
+  footer > p {
+    color: black;
+  }
+
+  .speaker-card .speaker-info p {
+    font-size: 12px;
+  }
+
+  #table > p {
     color: #d3d3d3;
     font-size: 12px;
-}
+  }
 
-/* Speakers Section Mobile */
+  /* Speakers Section Mobile */
 
   .ft-speakers {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-
-  .ft-speakers > h3 {
-    font-size: 26px;
-    color: #272a31;
-    margin-top: 20px;
-    margin-bottom: -15px;
   }
 
   .speaker-card {
@@ -238,11 +340,6 @@
     margin-right: 10px;
   }
 
-  .speaker-card .speaker-info h3 {
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-
   .speaker-card .speaker-info div {
     border: 0.1px solid black;
     width: 15px;
@@ -257,13 +354,9 @@
     margin-bottom: 10px;
   }
 
-  .speaker-card .speaker-info p {
-    font-size: 12px;
-  }
+  /* Partners Section Mobile */
 
-/* Partners Section Mobile */
-
-#partners {
+  #partners {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -271,64 +364,47 @@
     justify-content: center;
     background-color: #272a31;
     margin-top: 25px;
-}
+  }
 
-#partners > h3 {
+  #partners > h3 {
     font-size: 26px;
     color: #d3d3d3;
     margin-top: 20px;
     margin-bottom: -15px;
-}
+  }
 
-.partners-list {
+  .partners-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
-}
+  }
 
-#table2 {
+  #table2 {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
+  }
 
-#table2 > a:hover {
+  #table2 > a:hover {
     opacity: 100%;
-}
+  }
 
-#table2 > i {
+  #table2 > i {
     font-size: 28px;
     color: #d3d3d3;
     opacity: 50%;
-}
+  }
 
-#table2 > a {
-    text-decoration: none;
-    font-weight: 900;
-    color: #d3d3d3;
-    font-size: 18px;
-    opacity: 50%;
-}
+  /* Footer Mobile */
 
-/* Footer Mobile */
-
-footer {
+  footer {
     background-color: #fff;
     text-align: center;
     padding: 20px;
-}
-
-footer > a {
-    color: black;
-}
-
-footer > p {
-    color: black;
-}
-
+  }
 }
 
 /* Desktop Styles */
@@ -343,7 +419,88 @@ footer > p {
     padding: 5px 25px 7px 0;
   }
 
-/* Header Section Desktop */  
+  /* About Page Styles Mobile */
+
+  #form {
+    background-color: #272a31;
+    background-image: url('images/pattern.png');
+    background-size: cover;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  main > h1 {
+    color: #ec5242;
+    font-size: 30px;
+  }
+
+  #form > h1 {
+    color: #d3d3d3;
+    text-align: center;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    float: left;
+    width: 100%;
+    background-color: #272a31;
+    background-image: url('images/pattern.png');
+    background-size: cover;
+    color: #d3d3d3;
+    font-size: 20px;
+  }
+
+  form > label {
+    margin-left: 15px;
+    margin-top: 20px;
+  }
+
+  form > input {
+    float: left;
+    border: 1px solid #cfd8dc;
+    border-radius: 8px;
+    width: 447px;
+    height: 48px;
+    padding: 5px;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 17px;
+    color: #172b4d;
+    margin: 15px;
+  }
+
+  form > select {
+    float: left;
+    border: 1px solid #cfd8dc;
+    border-radius: 8px;
+    width: 447px;
+    height: 48px;
+    padding: 5px;
+    text-transform: capitalize;
+    font-weight: 400;
+    font-size: 17px;
+    color: #172b4d;
+    margin: 15px;
+  }
+
+  form > button {
+    font-size: 18px;
+    color: #d3d3d3;
+    border-radius: 18px;
+    background-color: #ec5242;
+    width: 150px;
+    height: 50px;
+    margin: 0 0 20px 160px;
+  }
+
+  form > button:active {
+    color: #d3d3d3;
+    background-color: #8c2418;
+  }
+
+  /* Header Section Desktop */
 
   #dark-head {
     color: #fff;
@@ -399,11 +556,6 @@ footer > p {
     opacity: 75%;
     transform: scaleX(-1);
   }
-  
-  main > h1 {
-    color: #ec5242;
-    font-size: 30px;
-  }
 
   main > h2 {
     color: #ec5242;
@@ -423,14 +575,14 @@ footer > p {
     opacity: 80%;
   }
 
-/* Main Section Desktop */
+  /* Main Section Desktop */
 
-.la-minus {
+  .la-minus {
     color: #ec5242;
     font-size: 60px;
   }
 
-#program {
+  #program {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -439,69 +591,38 @@ footer > p {
     background-color: #272a31;
     background-image: url('images/pattern.png');
     background-size: contain;
-}
+  }
 
-#program > a {
+  footer > a {
+    font-size: 26px;
+    color: black;
+  }
+
+  footer > i {
+    font-size: 26px;
+  }
+
+  footer > p {
+    color: black;
+    margin-left: 100px;
+  }
+
+  #program > a {
     text-decoration: underline;
     color: #d3d3d3;
     padding: 50px 0 50px 0;
-}
+  }
 
-#program > a:active {
-    color:#ec5242;
-}
-
-#program > h3 {
-    font-size: 26px;
-    color: #d3d3d3;
-    margin-top: 20px;
-    margin-bottom: -15px;
-}
-
-.program-list {
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-}
-
-#table {
-    width: 175px;
-    height: 185px;
-    border: 1px solid #272a31;
-    background-color: #ffffff20;
-    gap: 15px;
-    padding: 10px;
-    margin: 5px 0;
-}
-
-#table:hover {
-    border: 2px solid white;
-    cursor: pointer;
-}
-
-#table > i {
-    font-size: 50px;
-    color: #d3d3d3;
-}
-
-#table > h2 {
+  #table2 > a {
+    text-decoration: none;
     font-weight: 900;
-    color: #ec5242;
-    font-size: 18px;
-}
-
-#table > p {
     color: #d3d3d3;
-    font-size: 12px;
-} 
+    font-size: 18px;
+    opacity: 50%;
+  }
 
-/* Speakers Section Desktop */  
-
-  .ft-speakers {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  #program > a:active {
+    color: #ec5242;
   }
 
   .ft-speakers > h3 {
@@ -509,6 +630,68 @@ footer > p {
     color: #272a31;
     margin-top: 20px;
     margin-bottom: -15px;
+  }
+
+  .speaker-card .speaker-info h3 {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+
+  #program > h3 {
+    font-size: 26px;
+    color: #d3d3d3;
+    margin-top: 20px;
+    margin-bottom: -15px;
+  }
+
+  .program-list {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+  }
+
+  #table {
+    width: 175px;
+    height: 185px;
+    border: 1px solid #272a31;
+    background-color: #ffffff20;
+    gap: 15px;
+    padding: 10px;
+    margin: 5px 0;
+  }
+
+  #table:hover {
+    border: 2px solid white;
+    cursor: pointer;
+  }
+
+  #table > i {
+    font-size: 50px;
+    color: #d3d3d3;
+  }
+
+  #table > h2 {
+    font-weight: 900;
+    color: #ec5242;
+    font-size: 18px;
+  }
+
+  .speaker-card .speaker-info p {
+    font-size: 12px;
+  }
+
+  #table > p {
+    color: #d3d3d3;
+    font-size: 12px;
+  }
+
+  /* Speakers Section Desktop */
+
+  .ft-speakers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   #featured-speakers {
@@ -539,11 +722,6 @@ footer > p {
     margin-right: 15px;
   }
 
-  .speaker-card .speaker-info h3 {
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-
   .speaker-card .speaker-info div {
     border: 0.1px solid black;
     width: 15px;
@@ -558,13 +736,9 @@ footer > p {
     margin-bottom: 10px;
   }
 
-  .speaker-card .speaker-info p {
-    font-size: 12px;
-  }
+  /* Partners Section Desktop */
 
-/* Partners Section Desktop */
-
-#partners {
+  #partners {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -572,70 +746,48 @@ footer > p {
     justify-content: center;
     background-color: #272a31;
     margin-top: 75px;
-}
+  }
 
-#partners > h3 {
+  #partners > h3 {
     font-size: 26px;
     color: #d3d3d3;
     margin-top: 20px;
     margin-bottom: -15px;
-}
+  }
 
-.partners-list {
+  .partners-list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
     margin-bottom: 20px;
-}
+  }
 
-#table2 {
+  #table2 {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
+  }
 
-#table2 > i {
+  #table2 > i {
     font-size: 28px;
     color: #d3d3d3;
     opacity: 50%;
-}
+  }
 
-#table2 > a {
-    text-decoration: none;
-    font-weight: 900;
-    color: #d3d3d3;
-    font-size: 18px;
-    opacity: 50%;
-}
-
-#table2 > a:hover {
+  #table2 > a:hover {
     opacity: 100%;
-}
+  }
 
-/* Footer Desktop */
+  /* Footer Desktop */
 
-footer {
+  footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: #fff;
     padding: 20px;
-}
-
-footer > a {
-    font-size: 26px;
-    color: black;
-}
-
-footer > i {
-    font-size: 26px;
-}
-
-footer > p {
-    color: black;
-    margin-left: 100px;
-}
+  }
 }
