--- a/style.css
+++ b/style.css
@@ -492,7 +492,7 @@
     background-color: #ec5242;
     width: 150px;
     height: 50px;
-    margin: 0 0 20px 160px;
+    margin: 0 0 20px 0;
   }
 
   form > button:active {
