--- a/abt-style.css
+++ b/abt-style.css
@@ -1,43 +1,77 @@
 /* About Page Stylings */
+
 /* Global Styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+}
+
+.la-globe {
+  color: #ec5242;
+}
+
+.la-minus {
+  color: #ec5242;
+  font-size: 60px;
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 768px) {
+  /* Footer Section Mobile */
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 60px;
   }
-  
-  .la-globe {
-    color: #ec5242;
+
+  footer > a {
+    color: black;
+    margin-right: 50px;
+    font-weight: 900;
   }
-  
-  .la-minus {
-    color: #ec5242;
-    font-size: 60px;
+
+  footer > i {
+    font-size: 36px;
   }
-  /* Mobile Styles */
-  @media screen and (max-width: 768px) {
+
+  footer > i:hover {
+    transform: scale(1.3);
+  }
+
+  footer > p {
+    color: black;
+  }
+
+  footer > h6 {
+    display: none;
+  }
+
   /* Hamburger Overlay Section */
   #top-head {
     display: none;
   }
-  
+
   .desktop-menu {
     display: none;
   }
-  
+
   header {
     background-color: #d3d3d3;
   }
-  
+
   .mobile-menu {
     position: relative;
     display: flex;
     flex-direction: row;
     margin-left: 15px;
   }
-  
+
   .hamburger {
     background-color: transparent;
     color: #333;
@@ -46,7 +80,7 @@
     cursor: pointer;
     margin-top: 20px;
   }
-  
+
   #overlay {
     text-align: center;
     display: none;
@@ -58,11 +92,11 @@
     background-color: #d3d3d3;
     z-index: 9999;
   }
-  
+
   #overlay.show {
     display: block;
   }
-  
+
   #close-button {
     display: flex;
     flex-direction: row;
@@ -73,7 +107,7 @@
     cursor: pointer;
     margin: 25px 0 0 15px;
   }
-  
+
   .overlay-list {
     display: flex;
     flex-direction: column;
@@ -85,43 +119,43 @@
     margin-top: 50px;
     font-size: 25px;
   }
-  
+
   .overlay-list > li {
     border-bottom: 1px solid #fff;
     width: 100%;
     height: 75px;
   }
-  
+
   #light-head {
     color: #333;
     text-decoration: none;
   }
+
   /* Header Section Mobile */
   .main {
     background-image: url('images/bg_image_main.jpg');
     background-size: cover;
     background-repeat: no-repeat;
   }
-  
+
   main {
     padding: 40px;
     text-align: center;
     background-color: #d3d3d3;
     opacity: 75%;
-    text-align: center;
   }
-  
+
   main > h1 {
     font-size: 22px;
     color: #ec5242;
   }
-  
+
   main > h2 {
     color: #ec5242;
     font-size: 45px;
     font-weight: 900;
   }
-  
+
   main > p {
     border: 5px solid #fff;
     background-color: #fff;
@@ -129,7 +163,7 @@
     margin: 20px 0;
     width: 100%;
   }
-  
+
   main > h3 {
     font-size: 16px;
     color: #272a31;
@@ -144,6 +178,94 @@
   main > a:hover {
     text-decoration: underline;
   }
+
+  /* Past Section Mobile */
+  .bg-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ec5342bd;
+    width: 500px;
+    height: 300px;
+  }
+
+  .bg-1 > h2 {
+    font-size: 38px;
+    font-weight: 900;
+    color: #fff;
+  }
+
+  .bg-1 > p {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  .bg-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ec5342bd;
+    width: 500px;
+    height: 300px;
+  }
+
+  .bg-2 > h2 {
+    font-size: 38px;
+    font-weight: 900;
+    color: #fff;
+  }
+
+  .bg-1 > h2:hover {
+    transform: scale(1.3);
+  }
+
+  .bg-2 > h2:hover {
+    transform: scale(1.3);
+  }
+
+  .bg-2 > p {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  #past {
+    text-align: center;
+    margin-top: 50px;
+    border-top: 1px solid #d3d3d3;
+  }
+
+  #past > p {
+    font-size: 26px;
+    margin-top: 40px;
+    margin-bottom: -15px;
+  }
+
+  .past-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  #card1 {
+    height: 300px;
+    width: 500px;
+    background-size: cover;
+    background-image: url('images/about1.jpg');
+  }
+
+  #card2 {
+    height: 300px;
+    width: 500px;
+    background-size: cover;
+    background-image: url('images/about2.jpg');
+  }
+
   /* Logo Info Section Mobile */
   #logo-info {
     text-align: center;
@@ -171,15 +293,15 @@
     margin: 0 40px 0 40px;
   }
 
-  #main2 > #img:hover {
-    transform: scale(1.3);
-  }
-
   #main2 > #img {
     font-size: 90px;
     color: #ec5242;
   }
-  
+
+  #main2 > #img:hover {
+    transform: scale(1.3);
+  }
+
   #txt > h2 {
     font-size: 30px;
     font-weight: 900;
@@ -196,94 +318,9 @@
     border-bottom: 1px solid #272a31;
     width: 140px;
   }
-/* Past Section Mobile */
-#past {
-    text-align: center;
-    margin-top: 50px;
-    border-top: 1px solid #d3d3d3;
-  }
 
-#past > p {
-    font-size: 26px;
-    margin-top: 40px;
-    margin-bottom: -15px;
-  }
-
-.past-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-#card1 {
-    height: 300px;
-    width: 500px;
-    background-size: cover;
-    background-image: url('images/about1.jpg');
-}
-
-.bg-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #ec5342bd;
-    width: 500px;
-    height: 300px;
-}
-
-.bg-1 > h2 {
-    font-size: 38px;
-    font-weight: 900;
-    color: #fff;
-}
-
-.bg-1 > h2:hover {
-    transform: scale(1.3);
-}
-
-.bg-1 > p {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-}
-
-#card2 {
-    height: 300px;
-    width: 500px;
-    background-size: cover;
-    background-image: url('images/about2.jpg');
-}
-
-.bg-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #ec5342bd;
-    width: 500px;
-    height: 300px;
-}
-
-.bg-2 > h2 {
-    font-size: 38px;
-    font-weight: 900;
-    color: #fff;
-}
-
-.bg-2 > h2:hover {
-    transform: scale(1.3);
-}
-
-.bg-2 > p {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-}
-/* Partners Section Mobile*/
-#partners {
+  /* Partners Section Mobile */
+  #partners {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -293,14 +330,14 @@
     margin-top: 55px;
     padding: 20px;
   }
-  
+
   #partners > h3 {
     font-size: 26px;
     color: #d3d3d3;
     margin-top: 15px;
     margin-bottom: -15px;
   }
-  
+
   .partners-list {
     list-style: none;
     display: flex;
@@ -309,13 +346,13 @@
     gap: 25px;
     margin-bottom: 35px;
   }
-  
+
   #table2 {
     display: flex;
     flex-direction: row;
     align-items: center;
   }
-  
+
   #table2 > a {
     text-decoration: none;
     font-weight: 900;
@@ -323,32 +360,37 @@
     font-size: 28px;
     opacity: 50%;
   }
-  
+
   #table2 > a:hover {
     opacity: 100%;
   }
-  
+
   #table2 > i {
     font-size: 38px;
     color: #d3d3d3;
     opacity: 50%;
   }
-  /* Footer Section Mobile*/
+}
+
+/* Desktop Styles */
+@media screen and (min-width: 769px) {
+  /* Footer Section Desktop */
   footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
+    background-color: #272a31;
     padding: 60px;
+    margin-top: 100px;
   }
-  
+
   footer > a {
-    color: black;
+    color: #fff;
     margin-right: 50px;
     font-weight: 900;
   }
-  
+
   footer > i {
     font-size: 36px;
   }
@@ -356,27 +398,26 @@
   footer > i:hover {
     transform: scale(1.3);
   }
-  
+
   footer > p {
-    color: black;
+    color: #fff;
   }
 
   footer > h6 {
-    display: none;
+    color: #fff;
+    margin-left: 15px;
+    font-size: 15px;
   }
-}
 
-/* Desktop Styles */
-@media screen and (min-width: 769px) {
   /* Navigation Section Desktop */
   .mobile-menu {
     display: none;
   }
-  
+
   #overlay {
     display: none;
   }
-  
+
   #top-head > ul {
     list-style: none;
     display: flex;
@@ -386,7 +427,7 @@
     background-color: #333;
     padding: 5px 25px 7px 0;
   }
-  
+
   #dark-head {
     color: #fff;
     text-decoration: none;
@@ -394,71 +435,15 @@
     align-items: center;
     text-align: center;
   }
-  
+
   .desktop-menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 15px 25px 15px 25px;
   }
-  
-  .logo > a {
-    text-decoration: none;
-    color: #272a31;
-  }
-  
-  .header-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    list-style: none;
-    gap: 50px;
-  }
-  
-  #light-head {
-    color: #333;
-    text-decoration: none;
-  }
-  /* Header Section Desktop */
-  .main {
-    background-image: url('images/bg_image_main.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  main {
-    padding: 40px;
-    text-align: center;
-    background-color: #d3d3d3;
-    opacity: 75%;
-    text-align: center;
-  }
-  
-  main > h1 {
-    display: none;
-  }
-  
-  main > h2 {
-    color: #ec5242;
-    font-size: 45px;
-    font-weight: 900;
-  }
-  
-  main > p {
-    border: 5px solid #fff;
-    background-color: #fff;
-    padding: 10px;
-    margin: 20px 0;
-    width: 100%;
-  }
-  
-  main > h3 {
-    font-size: 16px;
-    color: #272a31;
-  }
 
+  /* Header Section Desktop Part */
   main > a {
     text-decoration: none;
     color: #272a31;
@@ -468,6 +453,152 @@
   main > a:hover {
     text-decoration: underline;
   }
+
+  /* Header Section Desktop Part End */
+  .logo > a {
+    text-decoration: none;
+    color: #272a31;
+  }
+
+  .header-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    list-style: none;
+    gap: 50px;
+  }
+
+  #light-head {
+    color: #333;
+    text-decoration: none;
+  }
+
+  /* Header Section Desktop */
+  .main {
+    background-image: url('images/bg_image_main.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  main {
+    padding: 40px;
+    text-align: center;
+    background-color: #d3d3d3;
+    opacity: 75%;
+  }
+
+  main > h1 {
+    display: none;
+  }
+
+  main > h2 {
+    color: #ec5242;
+    font-size: 45px;
+    font-weight: 900;
+  }
+
+  main > p {
+    border: 5px solid #fff;
+    background-color: #fff;
+    padding: 10px;
+    margin: 20px 0;
+    width: 100%;
+  }
+
+  main > h3 {
+    font-size: 16px;
+    color: #272a31;
+  }
+
+  /* Past Section Desktop */
+  .bg-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ec5342bd;
+    width: 450px;
+    height: 250px;
+  }
+
+  .bg-1 > h2 {
+    font-size: 38px;
+    font-weight: 900;
+    color: #fff;
+  }
+
+  .bg-1 > p {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  .bg-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ec5342bd;
+    width: 450px;
+    height: 250px;
+  }
+
+  .bg-2 > h2 {
+    font-size: 38px;
+    font-weight: 900;
+    color: #fff;
+  }
+
+  .bg-1 > h2:hover {
+    transform: scale(1.3);
+  }
+
+  .bg-2 > h2:hover {
+    transform: scale(1.3);
+  }
+
+  .bg-2 > p {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  #past {
+    text-align: center;
+    margin-top: 50px;
+    border-top: 1px solid #d3d3d3;
+  }
+
+  #past > p {
+    font-size: 26px;
+    margin-top: 40px;
+    margin-bottom: -15px;
+  }
+
+  .past-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  #card1 {
+    height: 250px;
+    width: 450px;
+    background-size: cover;
+    background-image: url('images/about1.jpg');
+  }
+
+  #card2 {
+    height: 250px;
+    width: 450px;
+    background-size: cover;
+    background-image: url('images/about2.jpg');
+  }
+
   /* Logo Info Section Desktop */
   #logo-info {
     text-align: center;
@@ -495,15 +626,15 @@
     margin: 0 40px 0 40px;
   }
 
-  #main2 > #img:hover {
-    transform: scale(1.3);
-  }
-
   #main2 > #img {
     font-size: 90px;
     color: #ec5242;
   }
-  
+
+  #main2 > #img:hover {
+    transform: scale(1.3);
+  }
+
   #txt > h2 {
     font-size: 30px;
     font-weight: 900;
@@ -520,128 +651,9 @@
     border-bottom: 1px solid #272a31;
     width: 140px;
   }
-/* Past Section Desktop */
-#past {
-    text-align: center;
-    margin-top: 50px;
-    border-top: 1px solid #d3d3d3;
-  }
 
-#past > p {
-    font-size: 26px;
-    margin-top: 40px;
-    margin-bottom: -15px;
-  }
-
-.past-card {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-}
-
-#card1 {
-    height: 250px;
-    width: 450px;
-    background-size: cover;
-    background-image: url('images/about1.jpg');
-}
-
-.bg-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #ec5342bd;
-    width: 450px;
-    height: 250px;
-}
-
-.bg-1 > h2 {
-    font-size: 38px;
-    font-weight: 900;
-    color: #fff;
-}
-
-.bg-1 > h2:hover {
-    transform: scale(1.3);
-}
-
-.bg-1 > p {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-}
-
-#card2 {
-    height: 250px;
-    width: 450px;
-    background-size: cover;
-    background-image: url('images/about2.jpg');
-}
-
-.bg-2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #ec5342bd;
-    width: 450px;
-    height: 250px;
-}
-
-.bg-2 > h2 {
-    font-size: 38px;
-    font-weight: 900;
-    color: #fff;
-}
-
-.bg-2 > h2:hover {
-    transform: scale(1.3);
-}
-
-.bg-2 > p {
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 700;
-    color: #fff;
-}
-/* Partners Section Desktop*/
-#partners {
+  /* Partners Section Desktop */
+  #partners {
     display: none;
-}
-  /* Footer Section Desktop*/
-  footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #272a31;
-    padding: 60px;
-    margin-top: 100px;
-  }
-  
-  footer > a {
-    color: #fff;
-    margin-right: 50px;
-    font-weight: 900;
-  }
-  
-  footer > i {
-    font-size: 36px;
-  }
-
-  footer > i:hover {
-    transform: scale(1.3);
-  }
-  
-  footer > p {
-    color: #fff;
-  }
-
-  footer > h6 {
-    color: #fff;
-    margin-left: 15px;
-    font-size: 15px;
   }
 }
