--- a/style.css
+++ b/style.css
@@ -101,33 +101,6 @@
 
   /* Footer Section Mobile */
   footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    padding: 60px;
-  }
-
-  footer > a {
-    color: black;
-    margin-right: 50px;
-    font-weight: 900;
-  }
-
-  footer > i {
-    font-size: 36px;
-  }
-
-  footer > i:hover {
-    transform: scale(1.3);
-  }
-
-  footer > p {
-    color: black;
-  }
-
-  footer > h6 {
     display: none;
   }
 
@@ -311,59 +284,54 @@
 
   /* Partners Section Mobile */
   #partners {
+    display: none;
+  }
+
+  /* See more Button */
+  .see-more {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    background-color: #272a31;
-    margin-top: 55px;
-    padding: 20px;
+    border: none;
+    padding: 50px 20px;
   }
 
-  #partners > h3 {
-    font-size: 26px;
-    color: #d3d3d3;
-    margin-top: 15px;
-    margin-bottom: -15px;
-  }
-
-  .partners-list {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 25px;
-    margin-bottom: 35px;
-  }
-
-  #table2 {
+  .see-more > button {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
   }
 
-  #table2 > a {
-    text-decoration: none;
-    font-weight: 900;
-    color: #d3d3d3;
-    font-size: 28px;
-    opacity: 50%;
+  .see-more > button:hover {
+    cursor: pointer;
   }
 
-  #table2 > a:hover {
-    opacity: 100%;
+  .see-more > button:active {
+    background-color: #ec534277;
   }
 
-  #table2 > i {
-    font-size: 38px;
-    color: #d3d3d3;
-    opacity: 50%;
+  #see-more > h2 {
+    font-size: 18px;
+  }
+
+  #see-more > i {
+    font-size: 14px;
+    color: #ec5242;
   }
 }
 
 /* Desktop Styles */
 @media screen and (min-width: 769px) {
+  /* See more Button */
+  .see-more {
+    display: none;
+  }
+
   /* Footer Section Desktop */
   footer {
     display: flex;
